# Privacy-Preserving-Expense-Review-Demo

./: .env.example  .gitignore  README.md  clean_rerun.py  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  streamlit_app.py  ui_helpers.py
cloud_session_bundle/: README.md  he_policy_operands.json  placeholder_metadata.json  policy_public_summary.json  sanitized_request.json
cloud_session_handoff/: OPEN_IN_SECOND_SESSION.md  README.md
data/: synthetic_expenses.jsonl  synthetic_ground_truth.jsonl
scripts/: clean_rerun_demo.py  export_cloud_session_bundle.py  gen_synthetic_data.py  import_cloud_he_plan.py  import_real_cloud_he_plan.py  preflight_env.py  prepare_real_cloud_session.py  run_benchmark.py  run_cloud_reasoner_skill_mock.py  run_correctness_suite.py  run_e2e_demo.py  run_eval.py  run_he_ops_demo.py  run_leakage_test.py  run_real_cloud_he_ops_demo.py  smoke_test.py
src/: __init__.py  audit.py  clean_rerun.py  cloud_bundle_exporter.py  cloud_reasoner_client.py  cloud_reasoner_mock.py  cloud_session_handoff.py  demo_workflow.py  detector_gliner.py  detector_rules.py  entity_resolver.py  eval_metrics.py  ground_truth_schema.py  he_service.py  he_service_mock.py  he_service_tfhe_placeholder.py  leakage_scan.py  models.py  paillier_he.py  pipeline.py  policy.py  real_cloud_session.py  reassembler.py  report_writer.py  runtime_env.py  sanitizer.py  synthetic_data.py  vault.py
tests/: conftest.py  test_clean_rerun.py  test_cloud_session_handoff.py  test_cloud_session_no_raw_access.py  test_cloud_skill_no_decrypt_requests.py  test_detector_rules.py  test_edge_cases.py  (+13 more)
(+69 files in other folders)
