[project]
name = "privacy-expense-demo"
version = "0.1.0"
description = "Privacy-preserving enterprise expense review demo"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "cryptography>=44.0.0",
  "jsonschema>=4.23.0",
  "pandas>=2.2.3",
  "python-dotenv>=1.0.1",
  "rich>=13.9.4",
  "streamlit>=1.44.1",
]

[project.optional-dependencies]
cpu = []
cu128 = []
gliner = [
  "gliner>=0.2.16",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
